--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Monica VanDieren, Ph.D. / Personal Website"
+title                    : "Monica VanDieren / Personal Website"
 title_separator          : "-"
 name                     : &name "Monica VanDieren"
 description              : &description "personal description"
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Monica VanDieren"
+  name             : "Monica VanDieren, Ph.D."
   avatar           : "profile.png"
   bio              : "Mathematician"
   location         : "Pittsburgh PA"
